--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
 
     "applications": {
 	"gecko": {
-	    "id": "mailmanmod@dasisdormax.github.com"
+	    "id": "mailmanmod@thenail.cc"
 	}
     },
 
@@ -22,15 +22,11 @@
     "browser_action": {
 	"default_icon": "icons/mmm-96.png",
 	"default_title": "Mailman Moderation",
-	"default_popup": "popup/mmm.html"
+	"default_popup": "html/popup.html"
     },
 
     "permissions": [
 	"<all_urls>",
 	"storage"
-    ],
-
-    "todo": [
-	"Add an icon"
     ]
 }
