--- a/manifest.json
+++ b/manifest.json
@@ -25,6 +25,10 @@
 	"default_popup": "html/popup.html"
     },
 
+    "background": {
+	"page": "html/background.html"
+    },
+
     "permissions": [
 	"<all_urls>",
 	"storage"
