--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,7 @@
 	}
     },
 
-    "content_security_policy": "script-src 'self' https://code.jquery.com; object-src 'self'",
+    "content_security_policy": "script-src 'self'; object-src 'self'",
     
     "icons": {
 	"96": "icons/mmm-96.png",
