--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,20 @@
 {
     "manifest_version": 2,
     "name": "__MSG_extensionName__",
-    "version": "0.5.12",
+    "version": "0.6.0",
 
     "description": "__MSG_extensionDescription__",
     "homepage_url": "https://github.com/dasisdormax/mailmanmod-webextension",
 
     "default_locale": "en",
 
-    "applications": {
+    "browser_specific_settings": {
 	"gecko": {
-	    "id": "mailmanmod@thenail.cc"
+	    "id": "mailmanmod@thenail.cc",
+	    "strict_min_version": "60"
+	},
+	"edge": {
+	  "browser_action_next_to_addressbar": true
 	}
     },
 
